--- a/recommender/templates/base.html
+++ b/recommender/templates/base.html
@@ -51,7 +51,7 @@
 
 </head>
 
-<body>
+<body class="bg-white">
 <header class="fixed w-full">
     <nav class="bg-white border-gray-200 py-2.5">
         <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
@@ -66,25 +66,11 @@
                        class="text-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 hover:bg-gray-200 focus:outline-none">
                         Hi! {{ request.session.user_name }}
                     </a>
-
                     <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown"
                          data-dropdown-placement="bottom-start"
-                         class="w-10 h-10 rounded-full cursor-pointer account-img" style="margin-right: 1rem "
+                         class="w-10 h-10 rounded-full cursor-pointer account-img" style="margin-right: 1rem"
                          src="{{ request.session.profile_picture }}" alt="User dropdown">&nbsp;
-                    <a href="{% url 'users:signout' %}" class="text-gray-700 hover:text-purple-700"
-                       style="color: #5521b5">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
-                             stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                  d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v15A2.25 2.25 0 007.5 22.5h6a2.25 2.25 0 002.25-2.25V15m-4.5-3h9m0 0l-3-3m3 3l-3 3"/>
-                        </svg>
-                    </a>
-
-                    {#<a href="{% url 'users:signout' %}"> <i class="fa-solid fa-right-from-bracket fa-xl"#}
-                    {#style="color: #6732bd;"></i> </a>#}
-
-
-                    <!-- Dropdown menu -->
+                    <!-- Moved dropdown here -->
                     <div id="userDropdown"
                          class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44">
                         <div class="px-4 py-3 text-sm text-gray-900">
@@ -107,63 +93,86 @@
                             </li>
                         </ul>
                     </div>
+                    <a href="{% url 'users:signout' %}" class="text-gray-700 hover:text-purple-700"
+                       style="color: #5521b5">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
+                             stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v15A2.25 2.25 0 007.5 22.5h6a2.25 2.25 0 002.25-2.25V15m-4.5-3h9m0 0l-3-3m3 3l-3 3"/>
+                        </svg>
+                    </a>
                 {% else %}
                     <a href="{% url 'users:signin' %}"
                        class="text-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 hover:bg-gray-200 focus:outline-none">
                         Log in
                     </a>
                     <a href="{% url 'users:signup' %}"
-                       class="text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 lg:mr-0 focus:outline-none">Register</a>
+                       class="text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 lg:mr-0 focus:outline-none">
+                        Register
+                    </a>
                 {% endif %}
                 <button data-collapse-toggle="mobile-menu-2" type="button"
                         class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
                         aria-controls="mobile-menu-2" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
+                         xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
                               d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                               clip-rule="evenodd"></path>
                     </svg>
                 </button>
             </div>
+
             <div class="items-center justify-between hidden w-full lg:flex lg:w-auto lg:order-1 nav-btn"
                  id="mobile-menu-2">
                 <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-4 lg:mt-0">
                     <li>
                         <a href="{% url 'dashboard:dashboard' %}"
-                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'dashboard' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}"
-                           aria-current="page">Home</a>
+                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'dashboard' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">
+                            Home
+                        </a>
                     </li>
-                    <li>
-                        <a href="{% url 'institutions:courses' %}"
-                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'courses' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Courses</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'institutions:institutions' %}"
-                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'institutions' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Institutions</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'institutions:favourites' %}"
-                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'favourites' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Favourites</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'users:user_profile' %}"
-                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'user_profile' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Profile</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'dashboard:contact_page' %}"
-                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'user_profile' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Contact</a>
-                    </li>
+                    {% if 'user_id' in request.session %}
+                        <li>
+                            <a href="{% url 'institutions:courses' %}"
+                               class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'courses' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Degrees</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'institutions:institutions' %}"
+                               class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'institutions' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Institutions</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'institutions:favourites' %}"
+                               class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'favourites' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Favourites</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'dashboard:contact_page' %}"
+                               class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'contact_page' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Contact</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'users:user_profile' %}"
+                               class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'user_profile' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">Profile</a>
+                        </li>
+                    {% else %}
+                        <li><span class="block py-2 pl-3 pr-4 text-gray-400 cursor-not-allowed">Degrees</span></li>
+                        <li><span class="block py-2 pl-3 pr-4 text-gray-400 cursor-not-allowed">Institutions</span></li>
+                        <li><span class="block py-2 pl-3 pr-4 text-gray-400 cursor-not-allowed">Favourites</span></li>
+                        <li><span class="block py-2 pl-3 pr-4 text-gray-400 cursor-not-allowed">Contact</span></li>
+                        <li><span class="block py-2 pl-3 pr-4 text-gray-400 cursor-not-allowed">Profile</span></li>
+                    {% endif %}
                     <li>
                         <a href="{% url 'dashboard:about_page' %}"
-                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'user_profile' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">About</a>
+                           class="block py-2 pl-3 pr-4 {% if request.resolver_match.url_name == 'about_page' %}text-purple-600{% else %}text-gray-700 hover:text-purple-600{% endif %}">
+                            About
+                        </a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
 </header>
+
 
 
 <main class="bg-white">
