--- a/recommender/templates/base.html
+++ b/recommender/templates/base.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/png" href="{% static 'icons/pathfinder-icon.png' %}">
+
 
     <title>PathFinder</title>
 
